# libta

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Kconfig  README.md  bosp.mk  libta.h
bscta/: CMakeLists.txt  bscta.cpp  bscta.h  libta_math.h
chronovise/: CMakeLists.txt  SimpleChronovise.cpp  SimpleChronovise.hpp  chronovise.cpp  chronovise.h  chronovise.hpp
dummy/: CMakeLists.txt  Makefile  dummy.cpp  dummy_test.cpp  test_trace.txt
include/libta/: libta.h  libta_math.h
test/: CMakeLists.txt  test-dist-bscta.cpp  test-internals-bscta.cpp  test-suite.cpp
tests/: Makefile  download_tests_dependencies.sh
tests/src/: test-request.cpp  tests-main.cpp
